# kryonix-installer

./: Cargo.toml  apply_semantic_theme.py  fix_app.js  fix_map.js  fix_network_theme.py  fix_theme.py  fix_ui.js  pr-body.md  test_hash  test_hash.rs
ui/: Cargo.toml  README.md  clean_jsx.cjs  index.html  package-lock.json  package.json  ragos-installer-ui.nix  tailwind.config.js  vite.config.js
ui/src/: App.jsx  index.css  install-plan.schema.json  main.jsx  main.rs
ui/src/components/: AdvancedLogsDrawer.jsx  Background3D.css  Background3D.jsx  DiskVisualizer.jsx  EagleLogo.jsx  ErrorDiagnosisPanel.jsx  FieldError.jsx  FooterFixed.jsx  KxCombobox.jsx  Layout.jsx  MockModeBanner.jsx  ProfileSelector.jsx  TimezoneMap.jsx  TimezoneSelector.jsx
ui/src/data/: featureCatalog.js  localizationMeta.js  profileCatalog.js  timezoneRegions.js
ui/src/hooks/: useInstallExecution.js
ui/src/i18n/: index.js
ui/src/pages/: Disks.jsx  Eula.jsx  HostSelection.jsx  Install.jsx  Localization.jsx  Login.jsx  MachineProfile.jsx  Network.jsx  Profile.jsx  RemoteAccess.jsx  Source.jsx  Summary.jsx  SystemFeatures.jsx  Timezone.jsx  UserFeatures.jsx  Users.jsx  Welcome.jsx
ui/src/state/: wizardState.js
ui/src/tests/: Disks.behavior.test.js  i18nHardcodedStrings.test.js  installExecution.test.js  installPlan.test.js  layoutAssistant.test.js  localizationCatalog.test.js  manualPartitioner.test.js  storagePlanner.test.js  wizardFuzz.test.js  wizardState.test.js  wizardStress.test.js
ui/src/utils/: calamaresTimezoneImages.js  installPlan.js  (+10 more)
ui/static/: app.js  index.html  style.css
(+32 files in other folders)
