[package]
name = "kryonix-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
regex = "1.10"
async-stream = "0.3.5"
futures-util = "0.3"
