[package]
name = "ragos-installer-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
async-stream = "0.3"
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "signal", "process"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.18"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"
hmac = "0.12"
sha2 = "0.10"
getrandom = "0.2"

